# sourmash_plugin_template

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: build-test.yml
src/: sourmash_plugin_xyz.py
