# CTB: search for XYZ and replace with plugin-specific information!

[project]
name = "sourmash_plugin_XYZ"
description = "sourmash plugin to do XYZ."
readme = "README.md"
requires-python = ">=3.8"
version = "0.1"

dependencies = ["sourmash>=4.8.0,<5"]

[metadata]
license = { text = "BSD 3-Clause License" }

# CTB note: do not need both reader and writer.

[project.entry-points."sourmash.load_from"]
xyz_reader = "sourmash_plugin_xyz:load_sketches"

[project.entry-points."sourmash.save_to"]
xyz_writer = "sourmash_plugin_xyz:SaveSignatures_XYZ"
