# CTB: use 'git grep -i xyz' to search for XYZ and replace with plugin name!

[project]
name = "sourmash_plugin_XYZ"
description = "sourmash plugin to do XYZ."
readme = "README.md"
requires-python = ">=3.10"
version = "0.1"

dependencies = ["sourmash>=4.8.11,<5"]

[metadata]
license = { text = "BSD 3-Clause License" }

# CTB note: you only need to include information about the entry points
# that your plugin defines; remove the rest. Multiple entry points of
# any particular type are perfectly fine too!

[project.entry-points."sourmash.load_from"]
xyz_reader = "sourmash_plugin_xyz:load_sketches"

[project.entry-points."sourmash.save_to"]
xyz_writer = "sourmash_plugin_xyz:SaveSignatures_XYZ"

[project.entry-points."sourmash.cli_script"]
xyz_command = "sourmash_plugin_xyz:Command_XYZ"
